[BUG] Adjusting contrast of action-blue against FAFAFA background
Action blue's contrast against the default content background of #FAFAFA did not meet WCAG AA color contrast standards. This is because we tested it against white.

It is relevant in the case of outline buttons, icons, and links used against the content background.

Tested in:
✔︎ Chrome
✔︎ Firefox

Closes: #2585

--- a/src/clr-angular/color/utils/_colors.clarity.scss
+++ b/src/clr-angular/color/utils/_colors.clarity.scss
@@ -111,9 +111,9 @@ $clr-action-blue-lightest: #e1f1f6 !default;
 $clr-action-blue-lighter: #89cbdf !default;
 $clr-action-blue-light: #49afd9 !default;
 $clr-action-blue-light-midtone: #0094d2 !default;
-$clr-action-blue: #007cbb !default;
+$clr-action-blue: #0079b8 !default;
 $clr-action-blue-accessible: #0077b7 !default;
-$clr-action-blue-dark-midtone: #007cbb !default;
+$clr-action-blue-dark-midtone: #0079b8 !default;
 $clr-action-blue-dark: #004a70 !default;
 $clr-action-blue-darker: #003a59 !default;
 $clr-action-blue-darkest: #002538 !default;
